# embedded_proj

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.c  main.h  main_pico2.c  main_pico2.h
MMWAVE/: CMakeLists.txt  main.c  mmwave_detect.c  mmwave_detect.h  mmwave_wrapper.c
Merge/: CMakeLists.txt  main.c
Spider/: CMakeLists.txt  spider_main.c  spider_main.h
algorithm/: algorithm.c  algorithm_main.c  algorithm_main.h  control.c  defs.h  main.c  sensor_data.txt  sensors.c
